tests/ui/parser/impl-on-unsized-typo.stderr
error: expected one of `,`, `:`, `=`, or `>`, found `?`
  --> $DIR/impl-on-unsized-typo.rs:3:8
   |
LL | impl<T ?Sized> Tr for T {}
   |        ^ expected one of `,`, `:`, `=`, or `>`

error: aborting due to 1 previous error

